FIx height coverflow

--- a/src/AppBundle/Resources/public/sass/unik/_product.scss
+++ b/src/AppBundle/Resources/public/sass/unik/_product.scss
@@ -353,6 +353,7 @@
     margin-top: -30px;
 
     #main-images {
+      min-height: 420px;
       .owl-nav {
         display: block;
 
